# AudioSnatch

./: README.md  pyproject.toml
.github/workflows/: release.yml
src/: scrape.py
src/audiosnatch/: __init__.py  __main__.py  ipaudio.py
