[project]
name = "audiosnatch"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "rozari0", email = "61970262+rozari0@users.noreply.github.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"audiosnatch" = "audiosnatch:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/audiosnatch"]
