[project]
name = "audiosnatch"
version = "0.1.2"
description = "An Audiobook downloader for goldenaudiobooks and sharedaudiobooks."
authors = [
    { name = "rozari0", email = "61970262+rozari0@users.noreply.github.com" }
]
dependencies = [
    "beautifulsoup4>=4.12.3",
    "lxml>=5.2.2",
    "requests>=2.32.3",
    "rich-click>=1.8.3",
    "validators>=0.33.0",
    "pysmartdl>=1.3.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"audiosnatch" = "audiosnatch:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/audiosnatch"]
